template copy.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Pipeline to deploy a static website using CodePipeline

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: '10.0.0.0/16'

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: 'us-east-1a'
      CidrBlock: '10.0.1.0/24'
      VpcId: !Ref VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for web servers
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  Server:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0a699202e5027c10d
      SecurityGroupIds:
        - !GetAtt WebServerSecurityGroup.GroupId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: Server
      UserData:
        Fn::Base64: |
          #!/bin/bash -xe
          apt update -y
          apt install nginx -y
          echo "<html><body><h1>Hello from EC2 instance</h1>" > /var/www/html/index.html
          echo "<p>Instance IP: $(curl -s http://169.254.169.254/latest/meta-data/public-ipv4)</p></body></html>" >> /var/www/html/index.html
          systemctl enable nginx
          systemctl start nginx
